# tp-multithreading

./: .gitignore  .pre-commit-config.yaml  .travis.yml  BaseManager.py  LICENSE  Minion.py  QueueClient.py  README.md  requirements.txt  venv_install.sh  venv_uninstall.sh
.github/workflows/: test.yml  test_cpp.yml  test_python.yml
setup/: requirements.txt  venv_install.sh
src/: Boss.py  CMakeLists.txt  Minion.py  QueueManager.py  Task.py  boss.py  low_level.cpp  manager.py  minion.h  minion.py  proxy.py  task.py
test/: TestTask.py  testLowlevel.cpp  testTask.py
